<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".src.ui.ProductSearchFragment"
        android:orientation="vertical"
        android:background="@color/primary">

        <!-- Logo -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/logo"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <!-- SubTitle, SearchView and ProgressBar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/subTitleMl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_search_fragment_subTitleML"
                android:textSize="24sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="sans-serif"
                android:layout_centerHorizontal="true"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/subTitleMl"
                android:background="@drawable/search_style_generic"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:elevation="8dp">

                <SearchView
                    android:id="@+id/ProductSearchView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:iconifiedByDefault="false"
                    android:imeOptions="actionSearch"
                    android:inputType="textNoSuggestions"
                    android:queryHint="Buscar en Mercado Libre"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>

                <ProgressBar
                    android:id="@+id/progressBarSearch"
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="100dp"
                    android:layout_centerInParent="true"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminate="true"
                    android:visibility="gone" />

            </RelativeLayout>

        </RelativeLayout>

        <!-- Advertising -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/product_search_card_style"
                    android:elevation="4dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/huawei"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/product_search_huawei"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/product_search_card_style"
                    android:elevation="4dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/philips"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/product_search_philips"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/product_search_card_style"
                    android:elevation="4dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/lg"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/product_search_lg"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/product_search_card_style"
                    android:elevation="4dp"
                    android:layout_margin="10dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/hasbro"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/product_search_hasbro"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

        <!-- RecyclerViewProducts -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@color/colorWhite">

            <!-- RecyclerViewProducts, Advertising(featureMercadoPagoAdvertising, featureBestSummerAirAdvertising) -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@color/colorWhite"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layoutAnimation="@anim/layout_animation"
                tools:listitem="@layout/product" />

            <LinearLayout
                android:id="@+id/featureMercadoPagoAdvertising"
                android:layout_width="170dp"
                android:layout_height="280dp"
                android:background="@color/colorWhite"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_search_mercado_pago_load_balance_phone"
                    android:textSize="12sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="50dp"
                    android:textAllCaps="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/product_search_offer_load_balance_phone"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ml_cel"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/featureBestSummerAirAdvertising"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_toEndOf="@+id/featureMercadoPagoAdvertising"
                android:background="@color/colorWhite"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:visibility="gone">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_search_summer"
                    android:textSize="12sp"
                    android:layout_margin="10dp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="50dp"
                    android:textAllCaps="true"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/product_search_air"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ml_aire"/>


            </LinearLayout>

        </RelativeLayout>

        <!-- Information -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_search_information"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </LinearLayout>
</layout>
